<resources>
    <string name="app_name">game_2024</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="restart">restart</string>

    <string name="start">start</string>
    <string name="game_field">Game field</string>
    <string name="scope_0">Score: 8</string>
    <string name="high_scope_0">High score: 0</string>
    <string name="score">%1$d</string>
    <string name="high_score">%1$d</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dialog_restart">Restart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_the_size_of_the_playing_field">Choose the size of the playing field</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">Ok</string>
    <string name="win">You win!</string>
    <string name="game_over">Game over...</string>
    <string name="dialog_exit">Exit?</string>

    <string name="sound">sound</string>


    <string name="reset">reset</string>
    <string name="undo">undo</string>
    <string name="home">home</string>
    <string name="exit">exit</string>
    <string name="music">music</string>
    <string name="high_score_text">HIGH SCORE</string>
    <string name="score_text">SCORE</string>
</resources>