<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    style="@style/AppDialogTheme"
    android:background="@drawable/background_dialog_exit_and_restart"
    tools:context=".view.dialogs.ExitDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/dela_gothic_one"
        android:text="@string/dialog_exit"
        android:textColor="@color/dialog"
        android:textSize="44sp"
        android:elevation="8dp"

        app:layout_constraintBottom_toTopOf="@+id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginBottom="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesExitButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/yes"
            android:textColor="@color/dialog"
            android:background="#00000000"
            android:textSize="36sp"
            app:cornerRadius="50dp"

            android:layout_marginEnd="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noExitButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/no"
            android:textColor="@color/dialog"
            android:background="#00000000"
            android:textSize="36sp"
            app:cornerRadius="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>